fixed air break spacing

--- a/less/nowplaying.less
+++ b/less/nowplaying.less
@@ -62,6 +62,9 @@
 
 .song-footer {
   .clearfix;
+  .wrap {
+    height: 21px
+  }
   .badge {
     margin-left: 5px;
     background-color: @linkColorHover;
